--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Configure Git
         run: |
           git config user.name "danigrb"
-          git config user.email danigarbagnati@gmail.com"
+          git config user.email "danigarbagnati@gmail.com"
 
       - name: Install Helm
         uses: azure/setup-helm@v1
