--- a/charts/miriaminfiore/values.yaml
+++ b/charts/miriaminfiore/values.yaml
@@ -39,23 +39,23 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 82
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations: 
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/ingress.class: traefik
   hosts:
-    - host: chart-example.local
+    - host: miriaminfiore.it
       paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+        - path: /test/
+          pathType: Prefix
+  tls: 
+    - secretName: miriaminfiore-it-tls
+      hosts:
+        - miriaminfiore.it
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
